# mspat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  conf.py  index.md  padata.md
tests/: conftest.py
tests/biocontacts/interactions/: test_base.py  test_clashes.py  test_hbonds.py  test_hydrophobic.py  test_ionic.py  test_pi.py
tests/biocontacts/interfaces/: test_interface.py
tests/data/: 3nzz.cif  3nzz.ent
tests/padata/: test_io.py
tests/padata/transform/: test_bonds.py  test_mask.py
tests/padata/utils/: test_pad.py
tests/padatasets/tasks/: test_reconstruct_task.py
