[project]
name = "mspat"
version = "0.1.0"
description = "MultiScale Protein Analysis Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "padata",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
padata = { workspace = true }


###########
# Linting #
###########

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = [
    "ALL", # include all the rules, including new ones
]
lint.ignore = [
    "ANN", # flake8-annotations
    "D100",   # ignore missing docs
    "D101",
    "D203",  # ignore no blank lines before class docstring
    "D213",  # multi-line docstring summary should start at the second line
    "COM812",  # ignore missing blank line after last section
    "FBT001",  # ignore boolean arguments
    "FBT002",
    "TD",  # ignore TODOs
    "FIX002",  # ignore TODOs
    "PLR0913",  # ignore too many arguments
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "D104",  # ignore missing docs
]
"scripts/**/*.py" = [
    "T201",  # ignore prints
    "PGH003", # allow unspecified type ignores
    "INP001", # ignore missing __init__.py
]
"tests/**/*.py" = [
    "D100",  # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "ANN",   # flake8-annotations
    "S101",  # ignore asserts
    "PLR2004",  # ignore magic values
    "PD901",  # allow df as variable name
    "SLF001", # private method accessed outside of class
    "PGH003", # allow unspecified type ignores
]
"packages/agat/**/*.py" = [
    "D100",  # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D400",
    "D415",
    "ANN",   # flake8-annotations
    "S101",  # ignore asserts
    "PLR2004",  # ignore magic values
    "PLR0913",
    "PD901",  # allow df as variable name
    "G004", # ignore logging with f-strings
]
"packages/anarci/**/*.py" = [  # vendored package
    "ALL"
]
"*.ipynb" = [
    "D",
    "ANN",   # flake8-annotations
    "S101",  # ignore asserts
    "PLR2004",  # ignore magic values
    "PD901",  # allow df as variable name
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]
